--- a/my-skills.html
+++ b/my-skills.html
@@ -96,7 +96,7 @@
           </div> 
 
           <div class="download"> 
-          <a href="assect/img/aditi kumari pandey_Final (2).pdf" download="assect/img/aditi kumari pandey_Final (2).pdf">Download resume</a>
+          <a href="assect/img/Aditi updated resume..pdf" download="assect/img/Aditi updated resume..pdf">Download resume</a>
         </div> 
         </div> 
 
@@ -108,15 +108,18 @@
 
           <!-- call area start here: -->
     <div class="call">
-        <div class="items">
+        <div class="items"> 
+            <div class="div1">
+                <a href="https://www.linkedin.com/in/aditi-kumari-pandey-366079243"><img src="assect/img/download.png" alt=""></a>
+            </div>  
         <div class="div1">
          <a href="whatsapp://send?abid=7004214398&text=Hello%2C%20World!"><img src="assect/img/WhatsApp.svg.png" alt=""></a>
         </div>
         <div class="div1">
-        <a href="tel:7004214398"><img src="https://cdn0.iconfinder.com/data/icons/social-messaging-ui-color-shapes/128/phone-circle-green-512.png" alt=""></a>
+        <a href="tel:8102812929"><img src="https://cdn0.iconfinder.com/data/icons/social-messaging-ui-color-shapes/128/phone-circle-green-512.png" alt=""></a>
         </div>
         <div class="div1">
-         <a href="mailto:pratikrains@gmail.com"><img src="https://cdn0.iconfinder.com/data/icons/apple-apps/100/Apple_Mail-512.png" alt=""></a>
+         <a href="mailto:aditikumaripandey810@gmail.com"><img src="https://cdn0.iconfinder.com/data/icons/apple-apps/100/Apple_Mail-512.png" alt=""></a>
          <!-- <a href = "mailto:abc@example.com?subject = Feedback&body = Message">
             Send Feedback
             </a> -->
