--- a/about-me.html
+++ b/about-me.html
@@ -57,6 +57,7 @@
                     <div class="deatils">  <p><strong>profile:</strong>Software Developer</p>  </div> 
                 </div>
             </div> 
+            <!--  -->
             <div class="para"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, fuga accusantium quibusdam numquam distinctio eligendi, velit laboriosam tempore amet doloremque error nemo provident, nobis quasi. Ipsam a quaerat, provident minus tempore sed suscipit numquam, eos hic ipsum nesciunt placeat dolorum, voluptate eum excepturi et! Quas nihil illo quia tempora nulla praesentium dolorum error eveniet assumenda sint porro aut corrupti, possimus consectetur voluptatem deleniti eos. Magni velit doloremque accusantium sed perferendis labore repellendus tenetur, debitis corporis dignissimos impedit fuga explicabo dolor, quia amet modi! Odio et, magnam quo sed dolorem alias.</p></div> 
         </div>  
         </div>  
@@ -69,15 +70,18 @@
 
     <!-- call area start here: -->
     <div class="call">
-        <div class="items">
+        <div class="items"> 
+            <div class="div1">
+                <a href="https://www.linkedin.com/in/aditi-kumari-pandey-366079243"><img src="assect/img/download.png" alt=""></a>
+            </div> 
         <div class="div1">
          <a href="whatsapp://send?abid=7004214398&text=Hello%2C%20World!"><img src="assect/img/WhatsApp.svg.png" alt=""></a>
         </div>
         <div class="div1">
-        <a href="tel:7004214398"><img src="https://cdn0.iconfinder.com/data/icons/social-messaging-ui-color-shapes/128/phone-circle-green-512.png" alt=""></a>
+        <a href="tel:8102812929"><img src="https://cdn0.iconfinder.com/data/icons/social-messaging-ui-color-shapes/128/phone-circle-green-512.png" alt=""></a>
         </div>
         <div class="div1">
-         <a href="mailto:pratikrains@gmail.com"><img src="https://cdn0.iconfinder.com/data/icons/apple-apps/100/Apple_Mail-512.png" alt=""></a>
+         <a href="mailto:aditikumaripandey810@gmail.com"><img src="https://cdn0.iconfinder.com/data/icons/apple-apps/100/Apple_Mail-512.png" alt=""></a>
          <!-- <a href = "mailto:abc@example.com?subject = Feedback&body = Message">
             Send Feedback
             </a> -->
