--- a/contact-me.html
+++ b/contact-me.html
@@ -28,9 +28,11 @@
 <div class="logo"> 
     <div class="card1"> 
         <div class="border"> 
+            <a href="mailto:aditikumaripandey810@gmail.com">
         <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-envelope symbol" viewBox="0 0 16 16">
             <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
           </svg> 
+          </a>
           <h1>Mail Us</h1> 
           <p class="intro">aditikumaripandey810@gmail.com</p> 
         </div> 
@@ -39,9 +41,11 @@
     </div> 
     <div class="card2"> 
         <div class="border"> 
+        <a href="tel:8102812929">
         <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-telephone-fill  symbol" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
           </svg>
+        </a>
         <h1>Contact Me</h1> 
           <p class="intro">8102812929</p> 
         </div>
@@ -93,15 +97,18 @@
 
 <!-- call area start here: -->
     <div class="call">
-        <div class="items">
+        <div class="items"> 
+            <div class="div1">
+                <a href="https://www.linkedin.com/in/aditi-kumari-pandey-366079243"><img src="assect/img/download.png" alt=""></a>
+            </div> 
         <div class="div1">
          <a href="whatsapp://send?abid=7004214398&text=Hello%2C%20World!"><img src="assect/img/WhatsApp.svg.png" alt=""></a>
         </div>
         <div class="div1">
-        <a href="tel:7004214398"><img src="https://cdn0.iconfinder.com/data/icons/social-messaging-ui-color-shapes/128/phone-circle-green-512.png" alt=""></a>
+        <a href="tel:8102812929"><img src="https://cdn0.iconfinder.com/data/icons/social-messaging-ui-color-shapes/128/phone-circle-green-512.png" alt=""></a>
         </div>
         <div class="div1">
-         <a href="mailto:pratikrains@gmail.com"><img src="https://cdn0.iconfinder.com/data/icons/apple-apps/100/Apple_Mail-512.png" alt=""></a>
+         <a href="mailto:aditikumaripandey810@gmail.com"><img src="https://cdn0.iconfinder.com/data/icons/apple-apps/100/Apple_Mail-512.png" alt=""></a>
          <!-- <a href = "mailto:abc@example.com?subject = Feedback&body = Message">
             Send Feedback
             </a> -->
